--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li>
           <a class="item" href="#">
             <svg class="icon email">
-              <use href="images/SVG/sprite-sheets.svg#email"></use>
+              <use href="./images/SVG/sprite-sheet.svg#email"></use>
             </svg>
             info@devstudio.com
           </a>
@@ -64,7 +64,7 @@
         <ul class="benefits-list">
           <li>
             <div>
-              <svg class="icon-benefit">
+              <svg class="icon-benefit" width="200" height="200">
                 <use href="./images/SVG/sprite-sheet.svg#antena"></use>
               </svg>
             </div>
@@ -78,8 +78,8 @@
 
           <li>
             <div>
-              <svg class="icon-benefit">
-                <use href="./images/SVG/sprite-sheet.svg#clock"></use>
+              <svg class="icon-benefit" width="200" height="200">
+                <use href="images/SVG/sprite-sheet.svg#clock"></use>
               </svg>
             </div>
 
@@ -92,7 +92,7 @@
 
           <li>
             <div>
-              <svg class="icon-benefit">
+              <svg class="icon-benefit" width="200" height="200">
                 <use href="./images/SVG/sprite-sheet.svg#diagram"></use>
               </svg>
             </div>
@@ -106,7 +106,7 @@
 
           <li>
             <div>
-              <svg class="icon-benefit">
+              <svg class="icon-benefit" width="200" height="200">
                 <use href="./images/SVG/sprite-sheet.svg#astronaut"></use>
               </svg>
             </div>
